--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <header>
         <h1>Meu Jogo em P5.js</h1>
     </header>
+    <p> E preciso achar as palavra corretamente a cada vez que vc achar as palavra vai ficar mais dificio para encontrar</p>
     <main>
         <div class="game-container">
             <iframe
-                src="https://editor.p5js.org/willian.freitas.lucas/full/FXSNpe1X4"//coloque o link no lugar desse
+                src="https://editor.p5js.org/willian.freitas.lucas/full/FXSNpe1X4"
                 frameborder="0"
                 allowfullscreen
                 class="game-frame">
